--- a/home/static/css/welcome_page.css
+++ b/home/static/css/welcome_page.css
@@ -168,3 +168,18 @@ svg:not(:root) {
         max-width: 100px;
     }
 }
+
+h2,h3,h1 {
+    text-align: center;
+}
+
+.home-richtext p{
+    font-size: 1.2rem;
+    font-family: sans-serif;
+}
+
+.home-content-block{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
