--- a/viblog/templates/blocks/slider_page.html
+++ b/viblog/templates/blocks/slider_page.html
@@ -1,11 +1,153 @@
+{% load wagtailimages_tags %}
+
 <style>
-    .slider-page-block{
-        display: block;,
+    .slider-page-block {
+        display: block;
         font-size: 1.5rem;
-        background: red;
+        margin: 0 auto;
+    }
+
+    .card-image-block{
+        height: 400px;
+    }
+    .card-image-block > img {
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        object-fit: fill;
+        object-position: center;
+    }
+
+    .heading-block-card{
+        display: block;
+        font-weight: bold;
+        font-family: sans-serif;
+        font-size: 2.5rem;
+    }
+    .heading-block-card a{
+        color: black;
+        text-decoration: none;
+    }
+    .heading-block-card a:visited{
+        color: black;
+        text-decoration: none;
+    }
+
+    .thubnail-high{
+        flex: 0 0 550px;
+    }
+
+    .card-description-block{
+        display: flex;
+        flex-direction: column;
+        gap:15px;
+    }
+
+    .description-card{
+        color: #888;
+        font-family: sans-serif;
+    }
+
+    .category-text{
+        font-size: 1.1rem;
+        font-weight: normal;
+    }
+
+    .category-block-card{
+        flex-wrap: wrap;
+        display: flex;
+        gap:5px;
+        flex-direction: row;
+    }
+
+    .viewport{
+        width: 100%;
+        {#display: flex;#}
+        {#flex-direction: row;#}
+        max-height: 400px;
+        position: relative;
+        overflow: hidden;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+    }
+    .slider-wrapper{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 0;
+        -webkit-transition: 1s;
+        -o-transition: 1s;
+        transition: 1s;
+        -webkit-transition-timing-function: ease-in-out;
+        -o-transition-timing-function: ease-in-out;
+        transition-timing-function: ease-in-out;
+
+    }
+    .slider-item{
+        flex: 1 0 100%;
+        object-fit: cover;
+        display: flex;
+        flex-direction: row;
+        height: auto;
     }
 </style>
 
-<div class="slider-page-block col-lg-8">
-
+<div class="slider-page-block col-lg-10">
+    <div class="slider-page-card viewport">
+        <div class="slider-wrapper">
+            {% for page in pages %}
+                    <div class="slider-item">
+                        <div class="card-image-block me-lg-4 col-lg-3 thubnail-high">
+                            {% srcset_image page.specific.image_card width-{400,800} sizes="(max-height: 400px) 400px, 80vw" %}
+                        </div>
+                        <div class="card-description-block flex col-lg-5 order-md-2 pt-2">
+                            <div class="category-block-card">
+                                {% for category in page.specific.category.all %}
+                                    <div class="category-text">{{ category }}</div>
+                                {% endfor %}
+                            </div>
+                            <div class="heading-block-card"><a href="{{ page.url }}">{{ page.specific.title }}</a></div>
+                            <div class="description-card">{{ page.specific.description }}</div>
+                        </div>
+                    </div>
+            {% endfor %}
+        </div>
+    </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script>
+    var slideNow = 1;
+    var slideCount = $('.slider-wrapper').children().length;
+    console.log(slideCount)
+    const nextSlide = () => {
+        if (slideNow == slideCount || slideNow <= 0 || slideNow > slideCount) {
+            console.log("SHO", slideNow)
+            $('.slider-wrapper').css('transform', 'translate(0, 0)');
+            slideNow = 1;
+        } else {
+            console.log("Шо?", slideNow)
+            translateWidth = -$('.viewport').width() * (slideNow);
+
+            $('.slider-wrapper').css({
+                'transform': 'translate(' + translateWidth + 'px, 0)',
+                '-webkit-transform': 'translate(' + translateWidth + 'px, 0)',
+                '-ms-transform': 'translate(' + translateWidth + 'px, 0)',
+            });
+            slideNow++;
+
+        }
+    }
+
+     $(document).ready(function () {
+        setInterval(nextSlide, 4500);
+     })
+
+
+</script>
+
