--- a/viblog/static/css/viblog.css
+++ b/viblog/static/css/viblog.css
@@ -157,3 +157,14 @@ content {
     display: block;
     padding: 40px 0;
 }
+
+body::-webkit-scrollbar {
+  width: 12px;               /* ширина scrollbar */
+}
+body::-webkit-scrollbar-track {     /* цвет дорожки */
+}
+body::-webkit-scrollbar-thumb {
+  background-color: blue;    /* цвет плашки */
+  border-radius: 20px;       /* закругления плашки */
+  border: 3px solid orange;  /* padding вокруг плашки */
+}
