--- a/viblog/static/css/blog_app/article.css
+++ b/viblog/static/css/blog_app/article.css
@@ -119,11 +119,14 @@ code{
     height: 150%;
     background: #052249;
     opacity: 0.9;
+    font-size: 1.75rem;
     z-index: 0;
 }
 
 .moderation-overflow h3{
-    color: black;
+    color: white;
+    font-weight: bolder;
+    font-size:3.5rem;
 }
 
 .moderation-report-form{
@@ -132,23 +135,55 @@ code{
 
     gap:15px;
 
-    color:black;
     padding: 0.75rem;
     position: fixed;
     right: 35px;
-    top:50%;
 
-    width: 20vw;
+    background-color: #093caf;
+
+    top:calc(50% - 25rem);
+
     opacity: 1;
 
     z-index: 20;
 
-    background: white;
-    border:10px solid lawngreen;
+    border: 5px solid #0606b2;
+
+    width: 55rem;
+    min-height: 50rem;
+
+    color:white;
+
+    -webkit-box-shadow: 2px 3px 12px 14px rgba(34, 60, 80, 0.2);
+-moz-box-shadow: 2px 3px 12px 14px rgba(34, 60, 80, 0.2);
+box-shadow: 2px 3px 12px 14px rgba(34, 60, 80, 0.2);
+
     border-radius: 10px;
 }
 
+.reported_item{
+    display: block;
+    width: 100%;
+    padding:10px;
+    font-size: 1.7rem;
+    font-weight: bold;
+    border: 1px solid #0d437a;
+    margin-bottom: 10px;
+    cursor: pointer;
 
+    border-radius: 10px;
+
+    background: #9bffee;
+}
+
+.moderation-report-title{
+    display: flex;
+    justify-content: space-between;
+}
+
+.moderation-report-close{
+    cursor: pointer;
+}
 
 .moderation-report__selected{
     display: block;
@@ -156,6 +191,9 @@ code{
     width: 100%;
     height: 35%;
     padding: 2rem;
+
+    color: black;
+
 
     border: 1px solid black;
 
