--- a/viblog/static/css/viblog.css
+++ b/viblog/static/css/viblog.css
@@ -168,3 +168,29 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px;       /* закругления плашки */
   border: 3px solid orange;  /* padding вокруг плашки */
 }
+
+@media screen and (max-width: 700px){
+
+    html{
+        font-size: 12px;
+    }
+
+    .footer{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .footer_content{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .footer__text{
+        margin: 0 auto;
+    }
+
+    .social__footer{
+        flex-direction: row;
+        margin: 0 auto;
+    }
+
+}
