--- a/viblog/templates/blocks/button_like.html
+++ b/viblog/templates/blocks/button_like.html
@@ -1,49 +1,14 @@
 
-<style>
-    .button-like{
-    border: 2px solid red;
-    display: flex;
-    flex-direction: row;
-    padding:10px 40px;
-    font-weight: bold;
-    font-size: 1.15rem;
-    gap:10px;
-    border-radius: 10px;
-    user-select: none;
-    cursor: pointer;
-}
 
-.button-liked{
-    background: #ff5858;
-}
-
-.button-like:active{
-    scale: .4;
-    transition: 2s;
-}
-
-/*.button-like:hover{*/
-/*    background: #ff5858;*/
-/*    transition: 0.6s;*/
-/*}*/
-
-.button-like__text{
-    margin: auto 0;
-    text-transform: uppercase;
-}
-
-button_like__logo{
-    background: red;
-    padding-bottom: 10px;
-}
-</style>
 <div class="button-like {% if liked %} button-liked {% endif %} flex flex-row">
-    <div class="button-like__text">Like</div>
-</div>
+    <div class="button_like__logo">
+        <svg width="50px" height="50px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<g id="icomoon-ignore">
+</g>
+<path d="M21.886 5.115c3.521 0 6.376 2.855 6.376 6.376 0 1.809-0.754 3.439-1.964 4.6l-10.297 10.349-10.484-10.536c-1.1-1.146-1.778-2.699-1.778-4.413 0-3.522 2.855-6.376 6.376-6.376 2.652 0 4.925 1.62 5.886 3.924 0.961-2.304 3.234-3.924 5.886-3.924zM21.886 4.049c-2.345 0-4.499 1.089-5.886 2.884-1.386-1.795-3.54-2.884-5.886-2.884-4.104 0-7.442 3.339-7.442 7.442 0 1.928 0.737 3.758 2.075 5.152l11.253 11.309 11.053-11.108c1.46-1.402 2.275-3.308 2.275-5.352 0-4.104-3.339-7.442-7.442-7.442v0z" fill="#000000">
 
-<script>
-        $('.button-like').click(() => {
-            console.log('flower')
-            $('.button-like').toggleClass('button-liked')
-        })
-</script>
+</path>
+</svg>
+    </div>
+    <div class="button-like__text">{{like_count}}</div>
+</div>
