--- a/viblog/static/css/viblog.css
+++ b/viblog/static/css/viblog.css
@@ -169,6 +169,234 @@ body::-webkit-scrollbar-thumb {
   border: 3px solid orange;  /* padding вокруг плашки */
 }
 
+.document-blocks{
+    gap:20px;
+}
+.document-item{
+    display: flex;
+    flex-direction: row;
+    gap:10px;
+    cursor: pointer;
+    -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    padding: 1rem;
+    border-radius: 20px;
+    width: 20rem;
+    margin-left: 10px;
+    border:2px solid #888;
+
+}
+.document-title{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    align-content: center;
+    font-size: 1.2rem;
+    font-family: sans-serif;
+}
+.document-title a {
+    color: black;
+}
+.slider-page-block {
+        display: block;
+        font-size: 1.5rem;
+        margin: 0 auto;
+    }
+
+.card-image-block{
+    height: 400px;
+}
+.card-image-block > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: fill;
+    object-position: center;
+}
+
+.heading-block-card{
+    display: block;
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 2.5rem;
+}
+.heading-block-card a{
+    color: black;
+    text-decoration: none;
+}
+.heading-block-card a:visited{
+    color: black;
+    text-decoration: none;
+}
+
+.thubnail-high{
+    flex: 0 0 550px;
+}
+
+.card-description-block{
+    display: flex;
+    flex-direction: column;
+    gap:15px;
+}
+
+.description-card{
+    color: #888;
+    font-family: sans-serif;
+}
+
+.category-text{
+    font-size: 1.1rem;
+    font-weight: normal;
+}
+
+.category-block-card{
+    flex-wrap: wrap;
+    display: flex;
+    gap:5px;
+    flex-direction: row;
+}
+
+.viewport{
+    width: 100%;
+    max-height: 400px;
+    position: relative;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+.slider-wrapper{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    -webkit-transition-timing-function: ease-in-out;
+    -o-transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out;
+
+}
+.slider-item{
+    flex: 1 0 100%;
+    object-fit: cover;
+    display: flex;
+    flex-direction: row;
+    height: auto;
+}
+.category-text{
+    font-family: sans-serif;
+    font-size: 1.25rem;
+}
+
+.category-text::after{
+    content:' • ';
+    font-weight: bolder;
+    padding: 10px;
+}
+.category-text:last-child::after{
+    content: '';
+}
+
+.small_card__image_block{
+    display: block;
+    min-height: 250px;
+    width: 100%;
+}
+.small_card__image_block img{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    object-position: center;
+    object-fit: fill;
+}
+
+.thubnail-small{
+    flex: 0 0 200px;
+}
+
+.small_card__block{
+    display: flex;
+    flex-direction: column;
+}
+.small_card__description-block {
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+    font-family: sans-serif;
+    text-wrap: normal;
+}
+
+.small-card__heading-block-card{
+    font-weight: bold;
+    font-size: 1.75rem;
+}
+.small-card__heading-block-card a{
+    color:black;
+}
+.small-card__description-card{
+    color: #888;
+    font-size: 1.25rem;
+    text-wrap: normal;
+    overflow: hidden;
+    padding-right:0.5rem;
+    padding-top: 0.5rem;
+}
+
+
+@media screen and (max-width: 700px) {
+    .slider-item{
+        width: 60%;
+        margin: 0 auto;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    .card-description-block{
+        margin: 0 auto;
+        justify-content: center;
+    }
+    .viewport{
+        max-height: 1200px;
+    }
+
+}
+@media screen and (max-width: 1000px) {
+    .slider-item {
+        width: 100%;
+        margin: 0 auto;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .card-description-block {
+        margin: 0 auto;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .viewport {
+        max-height: 1200px;
+    }
+
+    .card-image-block {
+        margin: 0 auto;
+        width: 100%;
+    }
+
+    .category-block-card {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 700px){
 
     html{
@@ -193,4 +421,169 @@ body::-webkit-scrollbar-thumb {
         margin: 0 auto;
     }
 
+}
+
+.table-page-block{
+        margin-bottom: 5rem;
+        margin-top:5rem;
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+.email-block{
+    margin:0 auto;
+    -webkit-box-shadow: -6px 10px 35px 12px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: -6px 10px 35px 12px rgba(34, 60, 80, 0.2);
+    box-shadow: -6px 10px 35px 12px rgba(34, 60, 80, 0.2);
+    border-radius: 10px;
+    padding: 2rem;
+
+    border: 1px solid blue;
+}
+.email-block-title{
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+.email-block-description{
+    text-wrap: normal;
+}
+
+.form-group{
+    display: flex;
+    flex-direction: row;
+    gap:20px;
+}
+
+.success-email{
+    background: #adf39e;
+    border:1px solid green;
+}
+
+.carousel-item > img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    border-radius:10px;
+}
+
+.inform-block{
+        width: 100%;
+        min-height: 5rem;
+        padding: 10px;
+        border-radius: 5px;
+        opacity: .8;
+        text-wrap: normal;
+        color:black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.25rem;
+}
+.green{
+    background: #73f654;
+    border: 2px solid green;
+}
+.red{
+    background: #fd4a4a;
+    border: 2px solid red;
+}
+.yellow{
+    background: #ffff92;
+    border: 2px solid yellow;
+}
+
+.button-like{
+    min-width: 150px;
+    border: 2px solid red;
+    display: flex;
+    flex-direction: row;
+    padding:10px 20px 5px 5px;
+    font-weight: bold;
+    font-size: 1.15rem;
+
+    border-radius: 10px;
+    user-select: none;
+    cursor: pointer;
+    justify-content: space-between;
+    gap:20px;
+}
+
+.button-liked{
+    background: #ff5858;
+}
+
+.button-like:active{
+    scale: .4;
+    transition: 2s;
+}
+
+/*.button-like:hover{*/
+/*    background: #ff5858;*/
+/*    transition: 0.6s;*/
+/*}*/
+
+.button-like__text{
+    margin: auto 0;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+button_like__logo{
+    background: red;
+}
+
+.button-report{
+        border: 2px solid #e3d544;
+        display: flex;
+        flex-direction: row;
+        padding:10px 40px;
+        font-weight: bold;
+        font-size: 1.15rem;
+        gap:10px;
+        border-radius: 10px;
+        user-select: none;
+        cursor: pointer;
+        margin-left: 2em;
+}
+
+.button-report__text{
+    margin: auto 0;
+    text-transform: uppercase;
+}
+
+.document-blocks{
+    gap:20px;
+}
+.document-item{
+    display: flex;
+    flex-direction: row;
+    gap:10px;
+    cursor: pointer;
+    -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    padding: 1rem;
+    border-radius: 20px;
+    width: 20rem;
+    margin-left: 10px;
+    border:2px solid #888;
+
+}
+.document-title{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    align-content: center;
+    font-size: 1.2rem;
+    font-family: sans-serif;
+}
+.document-title a {
+    color: black;
 }
