--- a/viblog/static/css/viblog.css
+++ b/viblog/static/css/viblog.css
@@ -132,6 +132,8 @@ footer {
     height: 15rem;
     margin-top: auto;
     padding: 1.7rem 0;
+    background: white;
+    z-index: 800;
 }
 
 .footer_content{
@@ -142,6 +144,8 @@ footer {
 }
 
 footer .footer__logo {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     font-weight: bolder;
     font-family: 'Helvetica Neue', 'Segoe UI', Arial, sans-serif;
@@ -175,7 +179,29 @@ a{
 content {
     display: block;
     padding: 40px 0;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    overflow-y: scroll;
+
+
 }
+
+.footer__menu{
+    display: flex;
+    flex-direction: column !important;
+    font-size: 1rem;
+    gap: 10px;
+    flex-grow: 1;
+    font-weight: 500;
+    text-align: center;
+}
+
+content::-webkit-scrollbar {
+  display: none;
+}
+
+
 
 body::-webkit-scrollbar {
   width: 12px;               /* ширина scrollbar */
