--- a/viblog/static/css/viblog.css
+++ b/viblog/static/css/viblog.css
@@ -233,6 +233,7 @@ body::-webkit-scrollbar-thumb {
 
 }
 .document-title{
+    margin: auto 0;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
