--- a/viblog/static/css/blog_app/article.css
+++ b/viblog/static/css/blog_app/article.css
@@ -112,7 +112,7 @@ code{
 
 .moderation-overflow{
     display: none;
-    position: absolute;
+    position: fixed;
     top:0;
     left:0;
     width: 100%;
